--- a/angular.json
+++ b/angular.json
@@ -83,20 +83,13 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/jest:run",
           "options": {
-            "main": "src/test.ts",
+            "configPath": "jest.conf.js",
+            "no-cache": true,
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.scss"
-            ],
-            "scripts": []
+            "coverageReporters": ["json", "lcov", "text", "clover", "html"]
           }
         },
         "lint": {
