--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "angtest",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
+    "node": "node --max_old_space_size=8192",
+    "ng": "npm run node node_modules/.bin/ng --",
+    "ngcc": "npm run node node_modules/.bin/ngcc --",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "npm run ngcc -- --tsconfig tsconfig.spec.json && cross-env NODE_ICU_DATA=node_modules/full-icu ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "jest": "jest"
   },
   "private": true,
+  "jest": {
+    "rootDir": "src"
+  },
   "dependencies": {
     "@angular/animations": "~11.1.2",
     "@angular/common": "~11.1.2",
@@ -19,24 +25,28 @@
     "@angular/platform-browser": "~11.1.2",
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
+    "@ngneat/until-destroy": "^8.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1101.3",
+    "@angular-builders/jest": "^10.0.1",
     "@angular/cli": "~11.1.3",
     "@angular/compiler-cli": "~11.1.2",
+    "@ngneat/spectator": "^7.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "babel-jest": "^26.3.0",
+    "cross-env": "^7.0.2",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.2.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "jest-expect-message": "^1.0.2",
+    "jest-extended": "^0.11.5",
+    "jest-mock-extended": "^1.0.10",
+    "jest-preset-angular": "^8.3.1",
+    "jest": "^26.4.2",
+    "full-icu": "^1.3.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
