--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
+    "paths": {
+    },
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
